# Budgerigar-1

./: README.md  package-lock.json  package.json
backend/: .env  Cargo.toml  Dockerfile  fill.sql
backend/.sqlx/: query-02bced540fafa16187181bd6be2bd5a8ba0730c1abfa612f498954b15e6c1fee.json  query-12b84b6a529b3497a3e053844bd260651d45da3a5179aef48bc12fdf2d1351d1.json  query-1ee0b384585b26e9ea2a4d29f6eb36bce552c42c032d5a516bf10ea4bd1dd79c.json  query-220fc5feab7e01450df22402d674f2e6e148ee8ccaf0659ef96c8baec523fd6e.json  query-2306b4b552242e75ef0b143cfa1c847b5a8317e3e998127df2b216f94d95ce15.json  query-25f277cc43893c102f0e7713aa2f3bdff7a8bad3978d702847b9928e99f4f4af.json  query-2ab34113c515bdec442734e094e5d29568f864e023d9fccb6791255ca75922cc.json  query-535a05974f7242d20a437c485da5624e174ea32ffa8391b375cde8ce5856ea7e.json  query-59705b450ed4e8ef345ca72deb0c4637b69efe3cce9f371780a21e404e4556e8.json  query-5d5d6dc08b77ba105f7f767e7cf1111655773f461e0babb6938442ab1f08343f.json  query-61da9bda33c34d150da0870b18b98c4883a10c685765687a6285d52ff5f857dc.json  query-62f716bf4f6055c2fad3fe76bd0592cc816b7ba3d713c6dae0841c54445a7e32.json  query-6352132393fedb1661ac33103fd3f2915cd7c05c76f992f550904e7ebbacf3b9.json  query-6b18a2766633db2500f1dc94d92bdcfdf88c261f3cb3fcb898f7cc5ab89706ea.json  query-77929b984ea1099d3f22d6c49ade965fc4ae7e9bd4c8ff248439317828122f2d.json  query-77b55bee50b9a2cf59399356066dd41b4313b985900b99067d025c882b1c282b.json  query-833581d45413e537f5724ed8d1008a0cda25ceefa9cad5b004f094f794dc6169.json  (+10 more)
backend/migrations/: 20240219063948_initial.down.sql  (+4 more)
(+80 files in other folders)
