[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.4", features = ["macros"] }
dotenvy = "0.15.7"
itertools = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "time"] }
thiserror = "1.0.57"
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-sessions = "0.10.4"
tower-sessions-sqlx-store = { version = "0.10.0", features = ["postgres"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
